[tool.poetry]
name = "deepimg3"
version = "1.3.7"
description = "Automated testing for the DeepAI text to image api"
authors = ["DJ Magar <dj@deepai.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.2"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
